Shark in position fixed + z-index

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,8 @@ footer {
 }
 
 #shark {
-  position: absolute;
+  position: fixed;
+  z-index: 10;
   bottom: 40px;
   left: 40px;
 }
@@ -437,7 +438,8 @@ footer {
   }
 
   #shark {
-    position: absolute;
+    position: fixed;
+    z-index: 10;
     bottom: 40px;
     right: 40px;
     left: auto;
